# pointcloud-viewer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build_liquer_pcv.sh  build_web.sh  data.csv  index.html  run.py
assets/: index.html  pointcloud-viewer.wasm
example/: server.py
liquer-pcv/: MANIFEST.in  README.md  requirements.txt  setup.py
liquer-pcv/example/: server.py
liquer-pcv/liquer_pcv/: __init__.py  commands.py
src/: column_filter.rs  erf.rs  evaluate.rs  highlight.rs  main.rs  measures.rs  mesh.rs  pipeline.rs  pointdata.rs  transform.rs
