[package]
name = "pointcloud-viewer"
version = "0.4.0"
authors = ["Orest Dubay <orest3.dubay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[dependencies]
#wasm-bindgen = {version="0.2.62", features=["serde-serialize"]}
serde = "1.0.106"
serde_derive = "1.0.130"
serde_json = "1.0.52"
serde_yaml = "0.9.17"
#regex = "1.3.7"
#nom = {version="5.1.1", features=["regexp"]}
cgmath = "0.18.0"
bitvector = "0.1.5"

egui = "0.19.0"
egui-macroquad = "0.12.0"
egui-miniquad = "0.12.0"
macroquad = "0.3.24"

csv = "1.1.6"
anyhow = "1.0.43"
#statrs = "0.16.0"

[profile.release]
opt-level = 2 # fast and small wasm
